--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
-p {
+p.mainTitle {
   line-height: 1.3;
   margin-top: 80px;
   margin-left: 150px;
   text-align: left;
   color: #3C3C3C;
-  font-size: 50px;
+  font-size: 3.5vw;
+  float: top;
 }
 
 p.mainText {
@@ -13,10 +14,17 @@ p.mainText {
   margin-bottom: 70px;
   margin-top: 20px;
   color: #3C3C3C;
-  font-size: 20px;
+  font-size: 1.3vw;
   text-align: left;
+  float: top;
 }
-
+hr {
+  height:1px;
+  border-width:0;
+  background-color:#000000;
+  margin-bottom: 40px;
+  margin-top: 40px;
+}
 div.TextBoxTitle {
   padding: 27px 0px;
   color: #3C3C3C;
@@ -36,7 +44,7 @@ div.TextBox {
   line-height: 3;
   padding-bottom: 20px;
   color: #3C3C3C;
-  font-size: 20px;
+  font-size: 1.3vw;
   text-align: left;
 }
 
@@ -69,7 +77,7 @@ body {
 }
 
 img.preview {
-  padding-top: 15px;
+  padding-top: 0px;
   float: left;
   width: 50px;
   max-width: 100%;
@@ -121,3 +129,14 @@ div.package2 {
   border-radius: 10px;
   background-color: white;
 } 
+html {
+  scroll-behavior: smooth;
+}
+
+#intro {
+  height: 600px;
+}
+
+#offers {
+  height: 600px;
+}
