--- a/topnav.css
+++ b/topnav.css
@@ -1,6 +1,6 @@
 ul {
   list-style-type: none;
-  margin: 0;
+  margin: 50;
   padding: 0;
   overflow: hidden;
   /* border: 1px solid #e7e7e7; */
@@ -11,6 +11,8 @@ ul {
 }
 
 li {
+  margin: 50;
+  padding: 50;
   float: left;
 }
 
@@ -18,15 +20,27 @@ li a {
   display: block;
   color: #666;
   text-align: center;
-  padding: 18px 30px;
+  padding: 25px 30px;
   text-decoration: none;
 }
 
-li a:hover:not(.active) {
+li a:hover {
   background-color: #ddd;
+}
+li a.active:hover {
+  background-color: #8BFF76;
 }
 
 li a.active {
   color: black;
   background-color: #08ff00;
+} 
+img.icon {
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 118px;
+  max-width: 100%;
+  height: auto;
+  float: left;
+  border-radius: 10px;
 } 
