--- a/GameChoice/Games/gameOptions.css
+++ b/GameChoice/Games/gameOptions.css
@@ -71,6 +71,36 @@ button.reset {
   background: none;
 
 }
+
+div.sendButton {
+  margin-top: 50px;
+}
+
+button.sendButton {
+  float: left;
+  background-color: #1BC300;
+  border-radius: 10px;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 100%;
+  margin: 4px 2px;
+  cursor: pointer;
+  min-width: 0%;
+  width: 400px;
+  max-width: 100%;
+  padding: 15px;
+  box-shadow: 0 0.625rem 3.5rem rgba(17,48,77,0.4);
+  position: absolute;
+  bottom: 0;
+  width: 20vw;
+  height: 3vw;
+  font-size: 15px;
+  transform: translate(calc(50vw - 10vw), 0);
+}
+
 img.resetImage {
   width: 100%;
   height: 100%;
@@ -81,25 +111,26 @@ button.reset:hover {
 
 
 img.gameIcon {
-
   width: 40px;
   height: 40px;
   border-radius: 8px;
   margin-bottom: -15px;
   box-shadow: 0 0.0rem 0.5rem rgba(17,48,77,0.3);
 }
+
 img.normalIcon {
   width: 40px;
   height: 40px;
   margin-bottom: -10px;
 }
-.games-container {
-  display: grid;
 
-  
+.games-container {
+  display: grid;  
   gap: 10px;
   padding: 10px;
+  position: absolute;
 }
+
 div.package {
   box-shadow: 0 0.625rem 2.5rem rgba(17,48,77,0.3);
   text-align: left;
@@ -108,19 +139,21 @@ div.package {
   height: 25vw;
   padding: 10px 50px;
   margin-top: 30px;
-  margin-left: 400px;
+  margin-left: 28vw;
   border-radius: 10px;
   background-color: white;
   float: top;
-
 }
+
 input.file{
   margin-top: 10px;
   width: 200px;
 }
+
 div.inputLine{
   float: left;
 }
+
 .vl {
   border-left: 2px solid black;
   height: 20vw;
@@ -129,17 +162,19 @@ div.inputLine{
   margin-top: -50px;
   float: left;
 }
-iframe {
 
+iframe {
+  width: 50vw;
+  height: 75vw;
   border-radius: 10px;
   float: left;
   border-width:0;
   margin-top: -220px;
   -ms-zoom: 0.75;
-        -moz-transform: scale(var(--scaleWin));
-        -moz-transform-origin: 0 0;
-        -o-transform: scale(var(--scaleWin));
-        -o-transform-origin: 0 0;
-        -webkit-transform: scale(calc(var(--scaleWin) * 1));
-        -webkit-transform-origin: 0 0;
+  -moz-transform: scale(var(--scaleWin));
+  -moz-transform-origin: 0 0;
+  -o-transform: scale(var(--scaleWin));
+  -o-transform-origin: 0 0;
+  -webkit-transform: scale(calc(var(--scaleWin) * 1));
+  -webkit-transform-origin: 0 0;
 }
