--- a/GameChoice/gameChoice.css
+++ b/GameChoice/gameChoice.css
@@ -1,9 +1,15 @@
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
 p.mainTitle {
   margin-top: 80px;
   text-align: center;
   color: #3C3C3C;
   font-size: 3vw;
   float: top;
+  animation: fadeIn 2s;
 }
 
 body {
@@ -34,7 +40,7 @@ button {
   width: 400px;
   max-width: 100%;
   padding: 15px;
-  /*box-shadow: 0 0.625rem 2.5rem rgba(17,48,77,0.2);*/
+  box-shadow: 0 0.625rem 2.5rem rgba(17,48,77,0.2);
 }
 
 button:hover {
