--- a/indexMobile.css
+++ b/indexMobile.css
@@ -1,27 +1,27 @@
 p.mainTitle {
   line-height: 1.3;
-  margin-top: 40px;
-  margin-left: 20px;
-  text-align: center;
+  margin-top: 80px;
+  margin-left: 10vw;
+  text-align: left;
   color: #3C3C3C;
-  font-size: 25px;
+  font-size: 6.5vw;
   float: top;
 }
 
 p.mainText {
   line-height: 1.5;
-  margin-left: 150px;
+  margin-left: 10vw;
   margin-bottom: 70px;
   margin-top: 20px;
   color: #3C3C3C;
-  font-size: 1.3vw;
+  font-size: 3.3vw;
   text-align: left;
-  float: left;
+  float: top;
 }
 p.info {
   line-height: 1.5;
   color: #3C3C3C;
-  font-size: 1.2vw;
+  font-size: 3.2vw;
   text-align: center;
 }
 p.TextBoxPrice {
@@ -56,7 +56,7 @@ div.TextBox {
   margin-bottom: 50px;
   line-height: 10;
   color: #3C3C3C;
-  font-size: 1.3vw;
+  font-size: 3.3vw;
   text-align: left;
 }
 
@@ -104,14 +104,27 @@ img.tick {
   height: auto;
 }
 
+div.screenshot {
+	width: 100vw;
+	height: 50vh;
+}
+
 img.screenshot {
-  margin-right: 130px;
-  width: 180px;
-  max-width: 100%;
-  height: auto;
-  float: top;
+  width: 35vw;
+  height: 45vh;
+  float: left;
   border-radius: 10px;
   box-shadow: 0 0.625rem 2.5rem rgba(17,48,77,0.3);
+}
+
+.screenshot-1 {
+	margin-left: 8vw;
+	float: left;
+}
+
+.screenshot-2 {
+	margin-left: 10vw;
+	float: right;
 }
 
 div.package1 {
@@ -159,17 +172,10 @@ html {
   scroll-behavior: smooth;
 }
 
-#intro {
-  height: 400px;
-}
-
-#offers {
-  height: 600px;
-}
 .games-container {
   display: grid;
   height: 400px;
   justify-content: space-evenly;
-  grid-template-columns: repeat(auto-fill, 33vw);
+  grid-template-columns: repeat(auto-fill, 80vw);
   margin-top: 50px;
 }
