--- a/contact.css
+++ b/contact.css
@@ -1,16 +1,16 @@
 p.mainTitle {
   color: #3C3C3C;
-  font-size: 2.5vw;
+  font-size: 30px;
   margin-left: 50px;
 } 
 p.mainText {
   color: #3C3C3C;
-  font-size: 1.5vw;
+  font-size: 20px;
   margin-left: 50px;
 }
 a.link{
-  font-size: 1.5vw;
-  margin-left: 50px;
+  font-size: 20px;
+  margin-left: 10px;
 }
 
 body {
