--- a/GameChoice/gameChoice.css
+++ b/GameChoice/gameChoice.css
@@ -26,7 +26,8 @@ div.TextBoxTitle {
 }
 
 button {
-  float: left;
+  font-weight: bold;
+  float: center;
   background-color: #1BC300;
   border-radius: 10px;
   border: none;
@@ -34,14 +35,14 @@ button {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 100%;
-  margin: 4px 2px;
+  font-size: 120%;
+  margin: 0px;
   cursor: pointer;
   min-width: 0%;
   width: 400px;
   max-width: 100%;
-  padding: 15px;
-  box-shadow: 0 0.625rem 2.5rem rgba(17,48,77,0.2);
+  padding: 10px;
+ /* box-shadow: 0 0.625rem 2.5rem rgba(17,48,77,0.2);*/
 }
 
 button:hover {
